--- a/listagem.html
+++ b/listagem.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -17,7 +16,7 @@ body { padding-top: 70px; }
   margin-right: 10px;
 }
 
-  .navbar {
+.navbar {
   background-color: #4CAF50; /* verde */
 }
 
@@ -31,7 +30,6 @@ body { padding-top: 70px; }
   color: #ddd;
 }
 
-  
 .membro-item {
   display: flex;
   align-items: center;
@@ -49,22 +47,59 @@ body { padding-top: 70px; }
 .checkbox-selecao {
   display: none;
 }
+
+/* Estilos para mensagem de não autorizado */
+#nao-autorizado {
+  margin-top: 100px;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Oculta conteúdo restrito por padrão */
+.conteudo-restrito {
+  display: none;
+}
+
+body.autorizado .conteudo-restrito {
+  display: block;
+}
 </style>
 </head>
 <body>
 
-  <!-- Verificação de Admin -->
-  <script type="module">
-    import { checkAdminAuth } from './auth.js';
-    if (!await checkAdminAuth()) {
-      window.location.href = 'index.html';
-    }
-  </script>
+<!-- Mensagem de não autorizado -->
+<div id="nao-autorizado">
+  <div class="alert alert-danger text-center">
+    <h4><i class="fas fa-exclamation-triangle me-2"></i>Acesso Restrito</h4>
+    <p class="mb-4">Você não tem permissão para acessar esta área administrativa.</p>
+    <a href="index.html" class="btn btn-primary">
+      <i class="fas fa-arrow-left me-2"></i>Voltar à página inicial
+    </a>
+  </div>
+</div>
 
-    
+<!-- Verificação de Admin -->
+<script type="module">
+  import { checkAdminAuth } from './auth.js';
+  
+  try {
+    if (await checkAdminAuth()) {
+      document.body.classList.add('autorizado');
+      document.getElementById('nao-autorizado').style.display = 'none';
+    } else {
+      document.body.classList.remove('autorizado');
+      document.getElementById('nao-autorizado').style.display = 'block';
+    }
+  } catch (error) {
+    console.error('Erro na verificação de autenticação:', error);
+    document.body.classList.remove('autorizado');
+    document.getElementById('nao-autorizado').style.display = 'block';
+  }
+</script>
 
 <!-- 🔹 Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top conteudo-restrito">
   <div class="container">
       <a class="navbar-brand" href="#">
         <i class="fas fa-list me-2"></i>Lista de Membros
@@ -85,9 +120,9 @@ body { padding-top: 70px; }
       </ul>
     </div>
   </div> 
-  </nav>
+</nav>
 
-<div class="container mt-4">
+<div class="container mt-4 conteudo-restrito">
   <div class="mb-3 d-flex justify-content-between">
     <div>
       <button id="btnSelecionar" class="btn btn-secondary">Selecionar Cadastros</button>
@@ -120,44 +155,44 @@ function carregarMembros(data) {
   }
 
   const membrosArray = Object.entries(data).map(([id, m]) => {
-  const funcao = (m.funcao || "").toLowerCase();
-  let ordemFuncao = 6;
-  if (funcao === "pastor") ordemFuncao = 1;
-  else if (funcao === "missionario" || funcao === "missionario(a)") ordemFuncao = 2;
-  else if (funcao === "diacono") ordemFuncao = 3;
-  else if (funcao === "obreiro" || funcao === "obreiro(a)") ordemFuncao = 4;
-  else if (funcao === "membro") ordemFuncao = 5;
+    const funcao = (m.funcao || "").toLowerCase();
+    let ordemFuncao = 6;
+    if (funcao === "pastor") ordemFuncao = 1;
+    else if (funcao === "missionario" || funcao === "missionario(a)") ordemFuncao = 2;
+    else if (funcao === "diacono") ordemFuncao = 3;
+    else if (funcao === "obreiro" || funcao === "obreiro(a)") ordemFuncao = 4;
+    else if (funcao === "membro") ordemFuncao = 5;
 
-  return {
-    id,
-    ...m,
-    ordemFuncao
-  };
-});
+    return {
+      id,
+      ...m,
+      ordemFuncao
+    };
+  });
 
-// ordena por ordem da função e depois por nome
-membrosArray.sort((a, b) => {
-  const ordemFuncao = a.ordemFuncao - b.ordemFuncao;
-  if (ordemFuncao !== 0) return ordemFuncao;
-  return (a.nome || "").localeCompare(b.nome || "");
-});
+  // ordena por ordem da função e depois por nome
+  membrosArray.sort((a, b) => {
+    const ordemFuncao = a.ordemFuncao - b.ordemFuncao;
+    if (ordemFuncao !== 0) return ordemFuncao;
+    return (a.nome || "").localeCompare(b.nome || "");
+  });
 
-for (const membro of membrosArray) {
-  const item = document.createElement("div");
-  item.className = "list-group-item membro-item";
+  for (const membro of membrosArray) {
+    const item = document.createElement("div");
+    item.className = "list-group-item membro-item";
 
-  item.innerHTML = `
-    <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${membro.id}">
-    <a href="ficha.html?id=${membro.id}" class="info-membro">
-      <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
-      <div>
-        <div><strong>${membro.nome}</strong></div>
-        <small>${membro.funcao}</small>
-      </div>
-    </a>
-  `;
-  lista.appendChild(item);
-}
+    item.innerHTML = `
+      <input type="checkbox" class="form-check-input me-2 checkbox-selecao" data-id="${membro.id}">
+      <a href="ficha.html?id=${membro.id}" class="info-membro">
+        <img src="${membro.fotoURL || ''}" class="foto-miniatura" alt="Foto">
+        <div>
+          <div><strong>${membro.nome}</strong></div>
+          <small>${membro.funcao}</small>
+        </div>
+      </a>
+    `;
+    lista.appendChild(item);
+  }
 
   atualizarVisibilidadeCheckboxes();
 }
@@ -284,24 +319,23 @@ btnExportarPDF.addEventListener("click", async () => {
     });
 
     doc.autoTable({
-  head: [["NOME", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
-  body: membrosArray,
-  startY: startY,
-  margin: { top: 10, bottom: 15 },
-  styles: { fontSize: 10 },
-  headStyles: { fillColor: [0, 128, 0], textColor: [255, 255, 255], fontSize: 10, fontStyle: 'bold' },
-  columnStyles: {
-    0: { cellWidth: 60 },  // Nome
-    6: { cellWidth: 80 }   // Endereço
-    // As colunas 1 a 5 ficam automáticas
-  },
-  didDrawPage: function(data) {
-    doc.setFontSize(8);
-    doc.text(`Página ${data.pageNumber}`, pageWidth / 2, doc.internal.pageSize.getHeight() - 10, { align: "center" });
-    const now = new Date();
-    doc.text(`Gerado em: ${now.toLocaleString("pt-BR")}`, pageWidth - 10, doc.internal.pageSize.getHeight() - 10, { align: "right" });
-  }
-});
+      head: [["NOME", "NASCIM", "SEXO", "TELEFONE", "FUNÇÃO", "BATISMO", "ENDEREÇO"]],
+      body: membrosArray,
+      startY: startY,
+      margin: { top: 10, bottom: 15 },
+      styles: { fontSize: 10 },
+      headStyles: { fillColor: [0, 128, 0], textColor: [255, 255, 255], fontSize: 10, fontStyle: 'bold' },
+      columnStyles: {
+        0: { cellWidth: 60 },  // Nome
+        6: { cellWidth: 80 }   // Endereço
+      },
+      didDrawPage: function(data) {
+        doc.setFontSize(8);
+        doc.text(`Página ${data.pageNumber}`, pageWidth / 2, doc.internal.pageSize.getHeight() - 10, { align: "center" });
+        const now = new Date();
+        doc.text(`Gerado em: ${now.toLocaleString("pt-BR")}`, pageWidth - 10, doc.internal.pageSize.getHeight() - 10, { align: "right" });
+      }
+    });
 
     doc.save("Lista_Membros.pdf");
     mostrarMensagemPDF("✅ PDF gerado com sucesso!");
@@ -342,8 +376,6 @@ function mostrarMensagemPDF(mensagem) {
 window.jsPDFGlobal = window.jspdf.jsPDF;
 </script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
-
 
 </body>
 </html>
