--- a/cadastro_usuario.html
+++ b/cadastro_usuario.html
@@ -3,55 +3,139 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cadastro de Usuário</title>
+<title>Gerenciar Usuários - Sistema Igreja</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<style>
+body { padding-top: 70px; background-color: #f8f9fa; }
+.navbar { background-color: #4CAF50; }
+.navbar .nav-link, .navbar .navbar-brand { color: #fff; }
+.navbar .nav-link:hover, .navbar .navbar-brand:hover { color: #ddd; }
+.admin-card { border-left: 4px solid #ffc107; }
+</style>
 </head>
-<body class="bg-light">
+<body>
 
-<div class="container mt-5">
-  <div class="card shadow">
-    <div class="card-body">
-      <h3 class="text-center">Cadastro de Usuário</h3>
-      <form id="cadastroForm">
-        <div class="mb-3">
-          <label for="fullName" class="form-label">Nome Completo</label>
-          <input type="text" id="fullName" class="form-control" required>
-        </div>
-        <div class="mb-3">
-          <label for="username" class="form-label">Nome de Usuário</label>
-          <input type="text" id="username" class="form-control" required>
-        </div>
-        <button type="submit" class="btn btn-success w-100">Cadastrar</button>
-      </form>
-      <div id="mensagem" class="mt-3 text-center"></div>
-    </div>
-  </div>
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<div class="container">
+<a class="navbar-brand" href="index.html">Gerenciar Usuários</a>
+<div class="collapse navbar-collapse">
+<ul class="navbar-nav me-auto">
+<li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
+<li class="nav-item"><a class="nav-link active" href="register.html">Usuários</a></li>
+</ul>
 </div>
+</div>
+</nav>
+
+<div class="container mt-4">
+<div class="row">
+<div class="col-lg-6 mb-4">
+<div class="card admin-card shadow">
+<div class="card-header bg-white"><h3 class="text-center mb-0">Usuários no DB</h3></div>
+<div class="card-body">
+<div class="table-responsive">
+<table class="table table-hover">
+<thead><tr><th>Nome</th><th>Usuário</th><th>Admin</th><th>Habilitado</th></tr></thead>
+<tbody id="usersList"></tbody>
+</table></div></div></div></div>
+
+<div class="col-lg-6">
+<div class="card admin-card shadow">
+<div class="card-header bg-white"><h3 class="text-center mb-0">Pendentes de Aprovação</h3></div>
+<div class="card-body">
+<ul id="pendingList" class="list-group"></ul>
+</div></div></div></div></div>
+
+<div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
 <script type="module">
-import { db } from './firebase-config.js';
-import { ref, push, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+import { db, auth } from './firebase-config.js';
+import { ref, get, set, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+import { getAllUsers, toggleUserEnabled, deleteUser } from './users.js';
+import { createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
-document.getElementById('cadastroForm').addEventListener('submit', async (e) => {
-  e.preventDefault();
+const usersList = document.getElementById('usersList');
+const pendingList = document.getElementById('pendingList');
 
-  const fullName = document.getElementById('fullName').value.trim();
-  const username = document.getElementById('username').value.trim();
+async function loadUsers() {
+const users = await getAllUsers();
+usersList.innerHTML = '';
+if (!users.length) {
+usersList.innerHTML = '<tr><td colspan="4" class="text-center">Nenhum usuário cadastrado</td></tr>';
+return;
+}
+users.forEach(user => {
+const row = document.createElement('tr');
+row.innerHTML = `
+<td>${user.fullName}</td>
+<td>${user.username}</td>
+<td>${user.isAdmin ? 'Sim' : 'Não'}</td>
+<td><input type="checkbox" class="enable-user" data-id="${user.id}" ${user.isEnabled ? 'checked' : ''}></td>`;
+usersList.appendChild(row);
+});
+document.querySelectorAll('.enable-user').forEach(cb => {
+cb.addEventListener('change', async () => {
+await toggleUserEnabled(cb.dataset.id, cb.checked);
+showToast(`Usuário ${cb.checked ? 'habilitado' : 'desabilitado'}`);
+});
+});
+}
 
-  const newRef = push(ref(db, 'pending_users'));
+async function loadPending() {
+const snap = await get(ref(db, 'pending_users'));
+pendingList.innerHTML = '';
+if (!snap.exists()) {
+pendingList.innerHTML = '<li class="list-group-item">Nenhum usuário pendente</li>';
+return;
+}
 
-  await set(newRef, {
-    username,
-    fullName,
-    isAdmin: false,
-    isEnabled: false,
-    awaitingAuth: true,
-    createdAt: new Date().toISOString()
-  });
+snap.forEach(child => {
+const u = child.val();
+const key = child.key;
+const li = document.createElement('li');
+li.className = 'list-group-item d-flex justify-content-between align-items-center';
+li.innerHTML = `
+<span>${u.fullName} (${u.username})</span>
+<button class="btn btn-primary btn-sm" onclick="aprovar('${key}','${u.username}','${u.fullName}')">Aprovar</button>`;
+pendingList.appendChild(li);
+});
+}
 
-  document.getElementById('mensagem').textContent =
-    "✅ Cadastro enviado! Aguarde aprovação do administrador.";
-  document.getElementById('cadastroForm').reset();
+window.aprovar = async (key, username, fullName) => {
+const email = `${username}@igreja.local`;
+const password = '123456'; // ou gere dinamicamente
+
+const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+const uid = userCredential.user.uid;
+
+await updateProfile(userCredential.user, { displayName: fullName });
+
+await set(ref(db, `users/${uid}`), {
+username,
+fullName,
+isAdmin: false,
+isEnabled: true,
+createdAt: new Date().toISOString()
+});
+
+await remove(ref(db, `pending_users/${key}`));
+
+showToast(`✅ Usuário ${fullName} aprovado e criado no Auth/DB!`);
+loadUsers();
+loadPending();
+};
+
+function showToast(message, type='success') {
+const toast = document.createElement('div');
+toast.className = `toast show text-bg-${type} m-2`;
+toast.innerHTML = `<div class="toast-body">${message}</div>`;
+document.getElementById('toastContainer').appendChild(toast);
+setTimeout(() => { toast.remove(); }, 3000);
+}
+
+document.addEventListener('DOMContentLoaded', () => {
+loadUsers();
+loadPending();
 });
 </script>
 
