--- a/register.html
+++ b/register.html
@@ -5,6 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gerenciar Usuários - Sistema Igreja</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 <style>
 body { padding-top: 70px; background-color: #f8f9fa; }
 .navbar { background-color: #4CAF50; }
@@ -17,12 +18,16 @@ body { padding-top: 70px; background-color: #f8f9fa; }
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
 <div class="container">
-<a class="navbar-brand" href="index.html">Gerenciar Usuários</a>
+<a class="navbar-brand" href="index.html"><i class="fas fa-user-shield me-2"></i> Gerenciar Usuários</a>
 <div class="collapse navbar-collapse">
 <ul class="navbar-nav me-auto">
-<li class="nav-item"><a class="nav-link" href="index.html">Início</a></li>
-<li class="nav-item"><a class="nav-link active" href="register.html">Usuários</a></li>
+<li class="nav-item"><a class="nav-link" href="index.html"><i class="fas fa-home"></i> Início</a></li>
+<li class="nav-item"><a class="nav-link active" href="register.html"><i class="fas fa-users-cog"></i> Usuários</a></li>
 </ul>
+<div class="d-flex align-items-center">
+<span id="currentUserDisplay" class="navbar-text text-warning me-3"></span>
+<button id="logoutBtn" class="btn btn-sm btn-outline-light">Sair</button>
+</div>
 </div>
 </div>
 </nav>
@@ -31,37 +36,51 @@ body { padding-top: 70px; background-color: #f8f9fa; }
 <div class="row">
 <div class="col-lg-6 mb-4">
 <div class="card admin-card shadow">
-<div class="card-header bg-white"><h3 class="text-center mb-0">Usuários no DB</h3></div>
+<div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-user-plus text-primary me-2"></i> Cadastrar Novo Usuário</h3></div>
+<div class="card-body">
+<form id="registerForm">
+<div class="mb-3"><label for="fullName" class="form-label">Nome Completo</label><input type="text" id="fullName" class="form-control" required></div>
+<div class="mb-3"><label for="username" class="form-label">Nome de Usuário</label><input type="text" id="username" class="form-control" required></div>
+<div class="mb-3"><label for="password" class="form-label">Senha</label><input type="password" id="password" class="form-control" required minlength="6"></div>
+<div class="mb-3 form-check"><input type="checkbox" id="isAdmin" class="form-check-input"><label for="isAdmin" class="form-check-label">É administrador?</label></div>
+<button type="submit" class="btn btn-success w-100 py-2"><i class="fas fa-save me-2"></i> Cadastrar Usuário</button>
+</form>
+</div></div></div>
+
+<div class="col-lg-6 mb-4">
+<div class="card admin-card shadow">
+<div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-users text-primary me-2"></i> Usuários Cadastrados</h3></div>
 <div class="card-body">
 <div class="table-responsive">
 <table class="table table-hover">
-<thead><tr><th>Nome</th><th>Usuário</th><th>Admin</th><th>Habilitado</th></tr></thead>
+<thead><tr><th>Nome</th><th>Usuário</th><th>Tipo</th><th>Habilitado</th><th>Ações</th></tr></thead>
 <tbody id="usersList"></tbody>
 </table></div></div></div></div>
 
-<div class="col-lg-6">
+<div class="col-lg-12 mb-4">
 <div class="card admin-card shadow">
-<div class="card-header bg-white"><h3 class="text-center mb-0">Pendentes de Aprovação</h3></div>
+<div class="card-header bg-white"><h3 class="text-center mb-0"><i class="fas fa-user-clock text-primary me-2"></i> Pendentes de Aprovação</h3></div>
 <div class="card-body">
 <ul id="pendingList" class="list-group"></ul>
-</div></div></div></div></div>
+</div></div></div></div>
 
 <div id="toastContainer" class="toast-container position-fixed top-0 end-0 p-3"></div>
 
 <script type="module">
 import { db, auth } from './firebase-config.js';
 import { ref, get, set, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
-import { getAllUsers, toggleUserEnabled, deleteUser } from './users.js';
+import { registerUser, getAllUsers, deleteUser, toggleUserEnabled, createUserInDB } from './users.js';
 import { createUserWithEmailAndPassword, updateProfile } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
 
 const usersList = document.getElementById('usersList');
 const pendingList = document.getElementById('pendingList');
+const registerForm = document.getElementById('registerForm');
 
 async function loadUsers() {
 const users = await getAllUsers();
 usersList.innerHTML = '';
 if (!users.length) {
-usersList.innerHTML = '<tr><td colspan="4" class="text-center">Nenhum usuário cadastrado</td></tr>';
+usersList.innerHTML = '<tr><td colspan="5" class="text-center">Nenhum usuário cadastrado</td></tr>';
 return;
 }
 users.forEach(user => {
@@ -69,14 +88,26 @@ const row = document.createElement('tr');
 row.innerHTML = `
 <td>${user.fullName}</td>
 <td>${user.username}</td>
-<td>${user.isAdmin ? 'Sim' : 'Não'}</td>
-<td><input type="checkbox" class="enable-user" data-id="${user.id}" ${user.isEnabled ? 'checked' : ''}></td>`;
+<td>${user.isAdmin ? 'Admin' : 'Usuário'}</td>
+<td><input type="checkbox" class="enable-user" data-id="${user.id}" ${user.isEnabled ? 'checked' : ''}></td>
+<td>
+<button class="btn btn-danger btn-sm delete-user" data-id="${user.id}"><i class="fas fa-trash"></i></button>
+</td>`;
 usersList.appendChild(row);
 });
 document.querySelectorAll('.enable-user').forEach(cb => {
 cb.addEventListener('change', async () => {
 await toggleUserEnabled(cb.dataset.id, cb.checked);
 showToast(`Usuário ${cb.checked ? 'habilitado' : 'desabilitado'}`);
+});
+});
+document.querySelectorAll('.delete-user').forEach(btn => {
+btn.addEventListener('click', async () => {
+if (confirm('Excluir este usuário?')) {
+await deleteUser(btn.dataset.id);
+showToast('Usuário excluído');
+loadUsers();
+}
 });
 });
 }
@@ -88,7 +119,6 @@ if (!snap.exists()) {
 pendingList.innerHTML = '<li class="list-group-item">Nenhum usuário pendente</li>';
 return;
 }
-
 snap.forEach(child => {
 const u = child.val();
 const key = child.key;
@@ -124,6 +154,19 @@ showToast(`✅ Usuário ${fullName} aprovado e criado no Auth/DB!`);
 loadUsers();
 loadPending();
 };
+
+registerForm.addEventListener('submit', async e => {
+e.preventDefault();
+await registerUser(
+document.getElementById('username').value,
+document.getElementById('password').value,
+document.getElementById('fullName').value,
+document.getElementById('isAdmin').checked
+);
+showToast('Usuário cadastrado');
+registerForm.reset();
+loadUsers();
+});
 
 function showToast(message, type='success') {
 const toast = document.createElement('div');
