--- a/exportar.html
+++ b/exportar.html
@@ -3,34 +3,20 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Administração - Membros</title>
+<title>Administração de Membros</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
-<script src="https://cdn.sheetjs.com/xlsx-latest/package/dist/xlsx.full.min.js"></script>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 <style>
 body { padding-top: 70px; }
-.navbar {
-  background-color: #4CAF50;
-}
-.navbar .nav-link, .navbar .navbar-brand {
-  color: #fff;
-}
-.navbar .nav-link:hover, .navbar .navbar-brand:hover {
-  color: #ddd;
-}
+.navbar { background-color: #4CAF50; }
+.navbar .nav-link, .navbar .navbar-brand { color: #fff; }
+.navbar .nav-link:hover, .navbar .navbar-brand:hover { color: #ddd; }
 #nao-autorizado {
-  margin-top: 100px;
-  max-width: 600px;
-  margin-left: auto;
-  margin-right: auto;
-  display: none;
+  margin-top: 100px; max-width: 600px;
+  margin-left: auto; margin-right: auto; display: none;
 }
-.conteudo-restrito {
-  display: none;
-}
-body.autorizado .conteudo-restrito {
-  display: block;
-}
+.conteudo-restrito { display: none; }
+body.autorizado .conteudo-restrito { display: block; }
 </style>
 </head>
 <body>
@@ -38,62 +24,40 @@ body.autorizado .conteudo-restrito {
 <div id="nao-autorizado">
   <div class="alert alert-danger text-center">
     <h4><i class="fas fa-exclamation-triangle me-2"></i>Acesso Restrito</h4>
-    <p class="mb-4">Você não tem permissão para acessar esta área administrativa.</p>
-    <a href="index.html" class="btn btn-primary">
-      <i class="fas fa-arrow-left me-2"></i>Voltar à página inicial
-    </a>
+    <p>Você não tem permissão para acessar esta área administrativa.</p>
+    <a href="index.html" class="btn btn-primary"><i class="fas fa-arrow-left me-2"></i>Voltar</a>
   </div>
 </div>
 
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top conteudo-restrito">
-  <div class="container">
-      <a class="navbar-brand" href="#">
-        <i class="fas fa-cogs me-2"></i>Administração de Membros
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="fas fa-home me-1"></i> Home
-            </a>
-          </li>
-        </ul>
-      </div>
-  </div>
+<div class="container">
+  <a class="navbar-brand" href="#"><i class="fas fa-database me-2"></i>Administração</a>
+</div>
 </nav>
 
-<div class="container conteudo-restrito">
-  <h2 class="mt-4">Exportar / Importar Membros</h2>
+<div class="container mt-4 conteudo-restrito">
+  <h3>Exportar/Importar Membros</h3>
   <div class="mb-3">
-    <button id="btnExportarExcel" class="btn btn-success">
-      <i class="fas fa-file-excel me-1"></i> Exportar para Excel
-    </button>
-    <input type="file" id="inputImportarExcel" accept=".xlsx" class="form-control mt-2">
+    <button id="exportar" class="btn btn-success"><i class="fas fa-file-export me-1"></i>Exportar Excel</button>
+    <input type="file" id="importar" class="form-control mt-2" accept=".xlsx" />
   </div>
-  <div id="mensagem" class="mt-3"></div>
+  <div id="status" class="mt-3"></div>
 </div>
 
 <script type="module">
 import { auth, db } from './firebase-config.js';
 import { onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
-import { ref, get, set } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+import { ref, set, get, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
 
 async function checkAdmin(user) {
-  try {
-    if (!user) return false;
-    const userRef = ref(db, `users/${user.uid}`);
-    const snapshot = await get(userRef);
-    if (snapshot.exists()) {
-      const userData = snapshot.val();
-      return userData.isAdmin === true;
-    }
-    return false;
-  } catch {
-    return false;
+  if (!user) return false;
+  const userRef = ref(db, `users/${user.uid}`);
+  const snapshot = await get(userRef);
+  if (snapshot.exists()) {
+    const userData = snapshot.val();
+    return userData.isAdmin === true;
   }
+  return false;
 }
 
 function toggleContent(isAdmin) {
@@ -116,121 +80,102 @@ document.addEventListener('DOMContentLoaded', () => {
     toggleContent(isAdmin);
   });
 });
+</script>
 
-function formatDateDMY(dateString) {
-  if (!dateString) return "";
-  const parts = dateString.split("-");
-  if (parts.length !== 3) return dateString;
-  return `${parts[2]}/${parts[1]}/${parts[0]}`;
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
+<script type="module">
+import { db } from './firebase-config.js';
+import { ref, set, get, remove } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-database.js";
+
+const btnExportar = document.getElementById("exportar");
+const inputImportar = document.getElementById("importar");
+const statusDiv = document.getElementById("status");
+
+function formatDateToDisplay(dateStr) {
+  const [y, m, d] = dateStr.split("-");
+  return `${d}/${m}/${y}`;
 }
 
-function excelDateToYMD(serial) {
-  const utc_days = Math.floor(serial - 25569);
-  const utc_value = utc_days * 86400;
-  const date_info = new Date(utc_value * 1000);
-  const year = date_info.getUTCFullYear();
-  const month = String(date_info.getUTCMonth() + 1).padStart(2, '0');
-  const day = String(date_info.getUTCDate()).padStart(2, '0');
-  return `${year}-${month}-${day}`;
+function formatDateToDB(dateStr) {
+  const [d, m, y] = dateStr.split("/");
+  return `${y}-${m}-${d}`;
 }
 
-// EXPORTAR
-document.getElementById("btnExportarExcel").addEventListener("click", async () => {
-  const membrosRef = ref(db, "membros");
-  const snapshot = await get(membrosRef);
+btnExportar.addEventListener("click", async () => {
+  const snapshot = await get(ref(db, "membros"));
   if (!snapshot.exists()) {
     alert("Nenhum membro encontrado.");
     return;
   }
 
-  const data = Object.values(snapshot.val()).map(m => ({
-    nome: m.nome || "",
-    nascimento: formatDateDMY(m.nascimento),
-    sexo: m.sexo || "",
-    telefone: m.telefone || "",
-    funcao: m.funcao || "",
-    batismo: formatDateDMY(m.batismo),
-    endereco: m.endereco || "",
-    bairro: m.bairro || "",
-    cidade: m.cidade || "",
-    estado: m.estado || "",
-    cep: m.cep || "",
-    fotoURL: m.fotoURL || ""
-  }));
-
-  const ws = XLSX.utils.json_to_sheet(data, {
-    header: [
-      "nome", "nascimento", "sexo", "telefone", "funcao", "batismo",
-      "endereco", "bairro", "cidade", "estado", "cep", "fotoURL"
-    ]
+  const data = Object.entries(snapshot.val()).map(([id, m]) => {
+    return {
+      nome: m.nome || "",
+      nascimento: m.nascimento ? formatDateToDisplay(m.nascimento) : "",
+      sexo: m.sexo || "",
+      telefone: m.telefone || "",
+      funcao: m.funcao || "",
+      batismo: m.batismo ? formatDateToDisplay(m.batismo) : "",
+      endereco: m.endereco || "",
+      bairro: m.bairro || "",
+      cidade: m.cidade || "",
+      estado: m.estado || "",
+      cep: m.cep || "",
+      fotoURL: m.fotoURL || ""
+    };
   });
+
+  const ws = XLSX.utils.json_to_sheet(data, {header: [
+    "nome","nascimento","sexo","telefone","funcao","batismo",
+    "endereco","bairro","cidade","estado","cep","fotoURL"
+  ]});
   const wb = XLSX.utils.book_new();
   XLSX.utils.book_append_sheet(wb, ws, "Membros");
+
   XLSX.writeFile(wb, "membros.xlsx");
-  mostrarMensagem("✅ Exportação concluída!");
 });
 
-// IMPORTAR com conversão de datas e substituição total
-document.getElementById("inputImportarExcel").addEventListener("change", async (e) => {
+inputImportar.addEventListener("change", async (e) => {
   const file = e.target.files[0];
   if (!file) return;
-
   const reader = new FileReader();
   reader.onload = async (evt) => {
     const data = evt.target.result;
-    const workbook = XLSX.read(data, { type: "binary" });
-    const wsname = workbook.SheetNames[0];
-    const ws = workbook.Sheets[wsname];
-    const json = XLSX.utils.sheet_to_json(ws);
+    const workbook = XLSX.read(data, {type: 'binary'});
+    const ws = workbook.Sheets[workbook.SheetNames[0]];
+    const jsonData = XLSX.utils.sheet_to_json(ws);
 
-    const membrosRef = ref(db, "membros");
-
-    await set(membrosRef, null);
-
-    let count = 0;
-
-    for (const [index, m] of json.entries()) {
-      const novoMembro = {
+    const updates = {};
+    jsonData.forEach((m, index) => {
+      const id = `membro_${index+1}`;
+      updates[id] = {
         nome: m.nome || "",
-        nascimento: (typeof m.nascimento === 'number')
-                      ? excelDateToYMD(m.nascimento)
-                      : m.nascimento || "",
+        nascimento: m.nascimento ? formatDateToDB(m.nascimento) : "",
         sexo: m.sexo || "",
         telefone: m.telefone || "",
         funcao: m.funcao || "",
-        batismo: (typeof m.batismo === 'number')
-                      ? excelDateToYMD(m.batismo)
-                      : m.batismo || "",
+        batismo: m.batismo ? formatDateToDB(m.batismo) : "",
         endereco: m.endereco || "",
         bairro: m.bairro || "",
         cidade: m.cidade || "",
         estado: m.estado || "",
         cep: m.cep || "",
-        fotoURL: m.fotoURL?.trim() ? m.fotoURL : "sem-foto.png"
+        fotoURL: m.fotoURL || "sem-foto.png"
       };
+    });
 
-      const id = `import-${Date.now()}-${index}`;
-      await set(ref(db, `membros/${id}`), novoMembro);
-      count++;
-    }
+    const membrosRef = ref(db, "membros");
+    await remove(membrosRef);
+    await set(membrosRef, updates);
 
-    mostrarMensagem(`✅ Importação concluída! ${count} registros salvos (dados anteriores foram substituídos).`);
-    e.target.value = "";
+    statusDiv.innerHTML = `<div class="alert alert-success mt-2">✅ Importação concluída. ${jsonData.length} membros importados.</div>`;
   };
-
   reader.readAsBinaryString(file);
 });
-
-function mostrarMensagem(msg) {
-  document.getElementById("mensagem").innerHTML = `
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-      ${msg}
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-  `;
-}
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script type="module" src="js/session-timeout.js"></script>
 </body>
 </html>
