--- a/presenca/lista_culto.html
+++ b/presenca/lista_culto.html
@@ -378,18 +378,30 @@ const itens = Object.entries(presentesData).map(([id, valor]) => {
     return { nome: valor, tipo: 'visitante', funcao: '', valor, id };
   }
 });
+
 itens.sort((a, b) => a.nome.localeCompare(b.nome));
+
 modalContent.innerHTML = '';
+
 itens.forEach(item => {
   const div = document.createElement('div');
   div.className = 'list-group-item d-flex justify-content-between align-items-center';
+
   if (item.tipo === 'membro') {
-    div.innerHTML = `<div>${item.nome}${item.funcao ? ` - ${item.funcao}` : ''}</div><span class="badge badge-member rounded-pill">Membro</span>`;
+    div.innerHTML = `
+      <div>${item.nome}${item.funcao ? ` - ${item.funcao}` : ''}</div>
+      <span class="badge badge-member rounded-pill">Membro</span>
+    `;
   } else {
-    div.innerHTML = `<div>${item.nome}</div><span class="badge badge-visitor rounded-pill">Visitante</span>`;
+    div.innerHTML = `
+      <div>${item.nome}</div>
+      <span class="badge badge-visitor rounded-pill">Visitante</span>
+    `;
   }
+
   modalContent.appendChild(div);
 });
+
 
         
         // Configura botão de exportar
