--- a/presenca/lista.html
+++ b/presenca/lista.html
@@ -33,6 +33,11 @@ body { padding-top: 56px; }
         <li class="nav-item">
           <a class="nav-link" href="frequencia.html"><i class="bi bi-graph-up me-1"></i> Frequência Mensal</a>
         </li>
+        
+        <li class="nav-item">
+          <a class="nav-link" href="lista_visitantes.html"><i class="fas fa-church me-1"></i> Consulta Lista de visitantes</a>
+        </li>
+      
       </ul>
     </div>
   </div>
